# bible-app

./: .gitignore  Dockerfile  README.md  app.ipynb  check_files.ipynb  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt
Process ESV/: 0.extract_text.ipynb  1.parse_text.ipynb  2.apply_metadata.ipynb  ESV_Bible_Cleaned.csv  README.md  extract_text.ipynb  parse_text.ipynb  z.map_structure.ipynb
Process ESV/src/: functions.py
app/: Search DEMO.ipynb  app.ipynb  app.py  cross_encoder.ipynb  embed_text.ipynb  gunicorn.conf.py  prepare_data.ipynb  requirements.txt  search_demo.ipynb  test_front_end.ipynb
app/data/: Book_of_John.csv  README.md
app/src/: SearchEngine.py  __init__.py  be_variables.py  chunk.py  engine.py  fe_variables.py
app/src/helpers/: blob_helpers.py  chunkers.py  nessie.py
backend/: Search DEMO.ipynb  app.ipynb  cross_encoder.ipynb
backend/src/: embed.py  get_answer.py  helpers.py
backend/src/helpers/: file_helpers.py
flagged/: log.csv
structure_pdf/: extract_text.ipynb
