[tool.poetry]
name = "bible-app"
version = "0.1.0"
description = ""
authors = ["Tyler Zimmer <t_zimmer3@yahoo.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "bibleapp"}]

[tool.poetry.dependencies]
python = "^3.9.5"
gradio = "4.26.0"
gunicorn = "^21.2.0"
aiohttp = "^3.7.4"
numpy = "1.22.2"
pandas = "1.4.1"
joblib= "1.1.0"
sentence_transformers= "^2.2.2"
huggingface-hub = "^0.19.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"